# ufl

./: .flake8  .gitattributes  .gitignore  .mailmap  .travis.yml  AGENTS.md  AUTHORS  ChangeLog  ChangeLog.md  ChangeLog.rst  MANIFEST.in  README  README.md  README.rst  ROADMAP  TODO  bitbucket-pipelines.yml  indexsumtodo.txt  pyproject.toml  release.conf  setup.cfg  setup.py  shippable.yml
.circleci/: config.yml
.github/workflows/: all.yml  build-wheels.yml  deploy.yml  docs.yml  fenicsx-refs.env  fenicsx-tests.yml  legacy-fenics-tests.yml  lint.yml  linting.yml  pythonapp.yml  spack.yml  test.yml  tsfc-tests.yml
demo/: ConjTest.dot  ConjTest.txt  ConjTest.ufl  Constant.py  Constant.ufl  ConvectionJacobi.py  ConvectionJacobi.ufl  ConvectionJacobi2.py  ConvectionJacobi2.ufl  ConvectionVector.py  ConvectionVector.ufl  Elasticity.py  EnergyNorm.py  EnergyNorm.ufl  Equation.py  Equation.ufl  ExplicitConvection.py  ExplicitConvection.ufl  FEEC.py  FEEC.ufl  FunctionOperators.py  FunctionOperators.ufl  H1norm.form  H1norm.py  H1norm.ufl  HarmonicMap.py  HarmonicMap.ufl  HarmonicMap2.py  HarmonicMap2.ufl  Heat.py  Heat.ufl  HornSchunck.py  HornSchunck.ufl  HyperElasticity.py  HyperElasticity.ufl  HyperElasticity1D.py  HyperElasticity1D.ufl  HyperElasticityWorkaround.ufl  L2norm.py  L2norm.ufl  (+95 more)
demo/broken/: HarmonicMap2.py  MixedElasticity.py  MixedPoisson.py  MixedPoisson2.py  RestrictedElement.py  Stokes.py  StokesEquation.py  VectorLaplaceGradCurl.py
doc/: Makefile  README
doc/source/: conf.py  index.rst  installation.rst  manual.rst  releases.rst
doc/sphinx/: Makefile  README  generate-apidoc
examples/: L2norm.form  source.form
newtest/: TODO  conftest.py  mockobjects.py  test_algorithms.py  test_analyse_demos.py  test_arithmetic.py  test_automatic_differentiation.py  test_book_snippets.py  test_change_to_local.py  test_classcoverage.py  test_conditionals.py  test_degree_estimation.py  test_derivative.py  test_diff.py  test_domains.py  test_elements.py  test_equals.py  test_evaluate.py  test_expand_indices.py  test_ffcforms.py  test_form.py  test_future_division.py  test_grad.py  test_illegal.py  test_indexing.py  test_indices.py  test_lhs_rhs.py  test_literals.py  test_measures.py  test_mock_expr.py  test_pickle.py  test_piecewise_checks.py  test_reference_shapes.py  test_scratch.py  test_signature.py  test_simplify.py  test_sobolevspace.py  test_split.py  test_str.py  test_tensoralgebra.py  (+1 more)
sandbox/: README  adtest.py  adtest2.py  basic_form_compiler.py  bc.ufl  changetolog.sh  component_aware_transformer.py  dependencies.py  gdimtest.py  index_renumbering_thoughts.txt  integralredesign.rst  latextest.py  lhsfail.py  lhstest.py  makeclasstree.sh  mathfunctions.py  multilinear.py  new_transformer.py  printclasstree.py  symbolic_converter.py  tensor_element.ufl  tensoralgebrastrings.py  tensortest.py  test.py  test_hyperelasticity.py  test_transformations.py  testproduct.py
sandbox/algorithmtests/: HyperElasticity1D_debug.py  HyperElasticitySVK_debug.py  debug_renumber_indices.py  degree_estimation.py  derivative.py  fast_expand_indices.py  renumber_indices.py  simplification_fail.py  symmetry_expand_indices.py  test_expand_indices.py  test_purge_list_tensors.py  test_restrictions.py
sandbox/ipytest/: graph.py
sandbox/oldsandbox/: profiling.py  stiffness_ad_debug.py  summarizetodos.py  testclasses.py  u2l.py  ufl-script-params.py
sandbox/operatortests/: test_as_tensor.py  test_product.py
sandbox/physdim/: check_physical_dimensions.py  physical_dimensions.py
sandbox/profiling/: ExpandIndices2Fail.ufl  compile_form.py  compile_hyperelasticity.py  test_expand_indices2.py
sandbox/pylintlog/: cleanlogs.py  import_pychecker.py  runpylint.sh
sandbox/scratch/: adjointbug.py  bessel.cpp  booltest.py  curltest.py  derivativetest.py  emptyform.py  inheritance.py  lifting.py  logtest.py  printdocstrings.py  replace.py  restrictiontest.py  slotstest.py  test.py  zeroformtest.py
sandbox/scripts/: printimports.py  (+8 more)
scripts/: fixdates  form2ufl  makedist  makedoc  ufl-analyse  ufl-convert  ufl-version  ufl2latex  ufl2pdf  ufl2py
src/: test.py
test/: README  TODO  algorithms.py  analyse-demos.py  analyse_demos.py  base.py  classcoverage.py  clean.sh  conditionals.py  conftest.py  derivative.py  diff.py  elements.py  evaluate.py  expand_indices.py  ffcforms.py  forms.py  illegal.py  indices.py  make_manual_testcase.py  makemanualtestcase.py  manualtest.py  mass.py  mock.py  mockobjects.py  olduglytestcode.py  pytest.ini  run_pychecker.py  runnosetests.py  simplify.py  sourceme.sh  split.py  swiginac_eval.py  template_test.py  test.py  test_algorithms.py  test_analyse_demos.py  test_apply_algebra_lowering.py  test_apply_coefficent_split.py  test_apply_derivatives.py  (+73 more)
tests/: algorithms.py  illegal_expressions.py  testforms.py  wrongforms.py
ufl/: __init__.py  action.py  action_draft.py  adjoint.py  adjoint_draft.py  algebra.py  all.py  analysis.py  argument.py  assertions.py  averaging.py  base.py  baseoperators.py  basisfunction.py  basisfunctions.py  cell.py  checks.py  classes.py  coefficient.py  common.py  compound_expressions.py  conditional.py  constant.py  constantvalue.py  differentiation.py  diffoperators.py  domain.py  domains.py  duals.py  elementlist.py  elements.py  equation.py  expr.py  exprcontainers.py  exprequals.py  exproperators.py  feec.py  finiteelement.py  form.py  formoperators.py  (+53 more)
ufl_legacy/: __init__.py  algebra.py  argument.py  assertions.py  cell.py  checks.py  coefficient.py  compound_expressions.py  conditional.py  constant.py  constantvalue.py  equation.py  exproperators.py  geometry.py  index_combination_utils.py  indexsum.py  log.py  mathfunctions.py  measure.py  objects.py  operators.py  precedence.py  protocols.py  sobolevspace.py  sorting.py
(+302 files in other folders)
