[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fenics-ufl"
version = "2025.1.0"
authors = [{ name = "UFL contributors" }]
maintainers = [
    { email = "fenics-steering-council@googlegroups.com" },
    { name = "FEniCS Steering Council" },
]
description = "Unified Form Language"
readme = "README.md"
license = { file = "COPYING.lesser" }
requires-python = ">=3.9.0"
dependencies = ["numpy"]

[project.urls]
homepage = "https://fenicsproject.org"
repository = "https://github.com/fenics/ufl.git"
documentation = "https://docs.fenicsproject.org"
issues = "https://github.com/FEniCS/ufl/issues"
funding = "https://numfocus.org/donate"

[project.optional-dependencies]
lint = ["ruff"]
docs = ["sphinx", "sphinx_rtd_theme"]
test = ["pytest"]
ci = [
    "coveralls",
    "coverage",
    "pytest-cov",
    "pytest-xdist",
    "fenics-ufl[docs]",
    "fenics-ufl[lint]",
    "fenics-ufl[test]",
]

[tool.setuptools]
packages = [
    "ufl",
    "ufl.algorithms",
    "ufl.core",
    "ufl.corealg",
    "ufl.formatting",
    "ufl.utils",
]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    # "N", # pep8-naming
    "E", # pycodestyle
    "W", # pycodestyle
    "D",   # pydocstyle
    "F",   # pyflakes
    "I",   # isort
    "RUF", # Ruff-specific rules
    # "UP",  # pyupgrade
    "ICN", # flake8-import-conventions
    "NPY", # numpy-specific rules
    "FLY", # use f-string not static joins
    "LOG", # https://docs.astral.sh/ruff/rules/#flake8-logging-log
    # "ISC", # https://docs.astral.sh/ruff/rules/#flake8-implicit-str-concat-isc
    # "B", # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    # "A", # https://docs.astral.sh/ruff/rules/#flake8-builtins-a
]
ignore = ["RUF005", "RUF012"]
allowed-confusables = ["𝐚", "𝐀", "∕", "γ", "⨯", "∨"]

[tool.ruff.lint.per-file-ignores]
"demo/*" = ["D"]
"doc/*" = ["D"]
"test/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
