# Setuptools does not yet support modern pyproject.toml but will do so in the
# future
[metadata]
name = fenics-ufl
version = 2023.2.0.dev0
author = FEniCS Project Contributors
email = fenics-dev@googlegroups.com
maintainer = FEniCS Project Steering Council
description = Unified Form Language
url = https://github.com/FEniCS/ufl
project_urls =
    Homepage = https://fenicsproject.org
    Documentation = https://fenics.readthedocs.io/projects/ufl
    Issues = https://github.com/FEniCS/ufl/issues
    Funding = https://numfocus.org/donate
long_description = file: README.rst
long_description_content_type = text/x-rst
license=LGPL-3.0-or-later
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >= 3.8
setup_requires =
    setuptools >= 62
    wheel
install_requires =
    numpy
    typing_extensions; python_version < "3.10"

[options.extras_require]
docs = sphinx; sphinx_rtd_theme
lint = flake8; pydocstyle[toml]
test = pytest
ci =
    coverage
    coveralls
    pytest-cov
    pytest-xdist
    fenics-ufl[docs]
    fenics-ufl[lint]
    fenics-ufl[test]

[flake8]
ignore = E501, W504,
         # Line break before operator, no longer PEP8.
         W503,
         # Indentation, can trigger for valid code.
         E129,
         # ambiguous variable name
         E741
builtins = ufl
exclude = .git,__pycache__,doc/sphinx/source/conf.py,build,dist,test

[pydocstyle]
# Work on removing these ignores
ignore = D100,D101,D102,D103,D104,D105,D107,
         D200,D202,
         # the skipping of D203 should be removed
         D203,
         D204,D205,D208,D209,D210,D212,D213,
         D300,D301,
         D400,D401,D402,D404,D415,D416
